--- a/mine/index.html
+++ b/mine/index.html
@@ -10,7 +10,7 @@
 
     <div class="wrapper">
         <header>
-            <a href="Portfolio/port.html"> <h1>Bootstrap</h1></a>
+            <a href="Portfolio/portm.html"> <h1>Bootstrap</h1></a>
           
             
         </header>
