--- a/jaja/index.html
+++ b/jaja/index.html
@@ -10,9 +10,9 @@
      <link rel="stylesheet" href="style.css">
 </head>
 <nav>
-    <a href="Portfolio/port.html"> <img src="images/logo1.png" class="logo"> </a>
+    <a href="Portfolio/portj.html"> <img src="images/logo1.png" class="logo"> </a>
 <ul>
-    <li><a href="Portfolio/port.html">Home</a></li>
+    <li><a href="Portfolio/portj.html">Home</a></li>
     <li><a href="#about">About</a></li>
     <li><a href="#hobbies">Hobbies</a></li>
     <li><a href="#contact">Contact</a></li>
