--- a/info/index.html
+++ b/info/index.html
@@ -11,7 +11,7 @@
 <body> 
     <!-- header site --> 
     <header> 
-        <a href="Portfolio/port.html"><div class="logo"><span>AD</span>OBS</div> </a>
+        <a href="Portfolio/ports.html"><div class="logo"><span>AD</span>OBS</div> </a>
            <ul class="navlist"> 
             <li><a href="#home">Home</a></li> 
             <li><a href="#about">About</a></li> 
@@ -21,7 +21,7 @@
          
                       
                       <div class="portfolio-links">  
-                        <a href="Portfolio/port.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                        <a href="Portfolio/ports.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                       </div>
                     </div>
                   </div>
